# citation-sync

./: CITATION.cff  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: sync-citation.yml
examples/workflows/: manual-sync.yml  pr-check.yml  python-publish.yml  release-sync.yml
src/: sync_citation.py
