# GitHub Action Dependencies
# This file manages dependencies for the citation-sync GitHub Action

[project]
name = "citation-sync"
version = "0.3.0"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0.0;python_version<'3.11'",
    "PyYAML>=6.0",
    "jsonschema>=4.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]